tests/NormalTests/paczka1/small_fuzzy/28023436.err
Error in line 1: kbij1keC A394 38,1
Error in line 12: VGtmu0 A394 58,5
